@startuml

class Order {
	- creditCard
    + getPrice()
    + getOther()
}

class CreditCardFactory {
    {static} + create()
}

interface CreditCard {
    + processPrice()
    + processOther()
}

class CTBC {
	+ processPrice()
	+ processOther()
}

class Taishin {
	+ processPrice()
	+ processOther()
}

class Citibank {
	+ processPrice()
	+ processOther()
}

class processService {
    {static} + calculateDefaultPrice()
    {static} + getDefaultOther()
}

class processDecorator {
    {static} + calculateRebate()
    {static} + calculateDiscount()
    {static} + getCoupon()
    {static} + getExtra()
    {static} + getPoint()
}

class EventService {
    {static} + isDateValid()
}

class MemberService {
    {static} + isMember()
    {static} + isTwoYearsMember()
}

class OrderProxy {
    {static} + calculateDiscount()
    {static} + getCoupon()
    {static} + getExtra()
}

Order *-right-> CreditCardFactory
CreditCardFactory .-> CreditCard
CreditCard <|.. CTBC
CreditCard <|.. Taishin
CreditCard <|.. Citibank
CreditCardFactory *-> CTBC
CreditCardFactory *-> Taishin
CreditCardFactory *-> Citibank
CTBC *-> processService
CTBC *-> processDecorator
CTBC *-> OrderProxy
Taishin *-> processService
Taishin *-> processDecorator
Taishin *-> OrderProxy
Citibank *-> processService
Citibank *-> processDecorator
Citibank *-> OrderProxy
OrderProxy *-> MemberService
OrderProxy *-> EventService

@enduml

